route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: test-argocd
spec:
  host: "test-app.oscp.intern.beon.net"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-app
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
